kustomize/argo-rollouts/base/gw.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: argo-rollouts
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "argo-rollouts.localhost"
